cluster/talos/apps/lldap/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lldap
  labels:
    goldilocks.fairwinds.com/enabled: "true"
