cluster/talos/apps/lldap/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: lldap-nodeport
  namespace: lldap
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: lldap
  ports:
    - port: 3890
      targetPort: 3890
      nodePort: 30389
