cluster/talos/apps/lldap/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lldap-ingress
  namespace: lldap
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: lldap-http
      port:
        number: 17170
  tls:
  - hosts:
    - lldap
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ldap-ingress
  namespace: lldap
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: lldap-ldap
      port:
        number: 3890
  tls:
  - hosts:
    - ldap
